2013/04    fixed bug in convergence check for V_xi_* and V_psi2_* (thanks for Triona Ryan)
2013/02    fixed bug in random effects updates and tweaked plot function.
2013/02    fixed bug in predict function for random effects models.
2013/01    changed onAttach to onLoad in zzz.R
2012/08    fixed bugs in handling of nodal covariates and cast same as sender, receiver or social. 
2012/08    working startup message. 
2012/08    fixed V_xi_e and V_psi2_e update bug (thanks to Sebastian Leist). 
2012/07    changed to mclustBIC in vblpcmstart function for compatibility with mclust 4. 