@@ -1,22 +1,22 @@
-f41aaaa4bd4eb591d7f1b251be28ac08 *CHANGELOG
-5d41853f335c406a6b401eb985edd5d1 *DESCRIPTION
-6066c73622b7572e7b444b0f1070c9cb *NAMESPACE
-0ad0649fad4d2bb50c2b83705e7bc878 *R/KL.R
-8213320f2c721fe16c7d6614c1c76fd9 *R/VBLPCM.R
-f5a063a6fb11f9872505867175805b1a *R/adjacency_to_edges.R
+7b700f1100f4f02975440441b77fc806 *CHANGELOG
+b77f654729f3b2c6e438b2b07580c9dd *DESCRIPTION
+c771c3b32ace90453b25137ffb8b2230 *NAMESPACE
+93ddbebf082e5c5a3d09d70b0ba310af *R/KL.R
+85b49f0298acd5832328bf7056a7d89a *R/VBLPCM.R
+379f163c1563f5e8cfaf99a968526ccf *R/adjacency_to_edges.R
 124931b1ae2da9856a9bed1beb43047d *R/covs.R
 579ace11895685c2763f4582f906a115 *R/fruchterman_reingold.R
-b2971e93430601290bc92758c8587c1f *R/gof.vblpcm.R
+98dacf0e91110b016a91e5c740b2cc51 *R/gof.vblpcm.R
 22cfa974f939d2a3eaac900b0c8ef12f *R/log_like_forces.R
-1dd021e02ea8e1340f5a6405d90445cc *R/plot_network.R
+9fc252b68a6dc43a2bc8d97ab3f07f53 *R/plot_network.R
 6d0b56049f54c59dbe71754983a9a80d *R/predict.R
 203861162888e86a84e9b20d62f2d8ba *R/print.vblpcm.R
 32ef7505c44b2245b165b30aa1ebf816 *R/roc.R
-179f3a74db4b96f6f824a9872d610361 *R/start.R
+cbc3892e84de2ad70d53419d1f5b66e2 *R/start.R
 4f69c86b26fbc64b90e83eb39a6ac450 *R/summarise_groups.R
 054e8f388ac9c8373ab5b6e66818754e *R/summary.vblpcm.R
 31c8ccdf29df94b0f5f9508fcb1a7e9e *R/vb_bic.R
-a44399fc95fddd70cdb16f8e6b0eb5eb *R/zzz.R
+63614bbf06782761aa98e6a8896385ef *R/zzz.R
 1215b49b49d2dcb0f996500bd0e7c5ce *configure
 654b38e8f3726e7c9613425a5b50bbd8 *configure.ac
 013778ff539b989141783da07f3ddd03 *data/aids.rda
@@ -25,10 +25,10 @@ a44399fc95fddd70cdb16f8e6b0eb5eb *R/zzz.R
 9beed6138652a9e4ebedd2cb1f270acb *inst/CITATION
 4ccabdb12a6c7592d26cceab34755ee0 *man/E_to_Y.Rd
 62b220ff6a4b95449f21d7eabbbd5848 *man/VBLPCM-internal.Rd
-a4bb9d61c477af04359d4775d445c8af *man/VBLPCM-package.Rd
+8d1dca5c8575cf5ebd1fa4bb26a50c8d *man/VBLPCM-package.Rd
 1d21ac5b8c3d8909d4782465e94cec14 *man/Y_to_E.Rd
-b08842a305ad02114fee7ce021dbf4d5 *man/Y_to_M.Rd
-722b273c922c4daaccf40eb94c0776a7 *man/Y_to_nonE.Rd
+0eb794fe9b2faea92c95f0146560ac1a *man/Y_to_M.Rd
+a3d9e7566f96741ba738afda6cade6d7 *man/Y_to_nonE.Rd
 c402389b40f3d6263da75eca5e95b46a *man/aids.Rd
 2a466bc056b8b1c4bf5729f5c25603a3 *man/fruchterman_reingold.Rd
 9a832653115a125a4f7b4e1c9e42210a *man/gof.vblpcm.Rd
@@ -44,20 +44,19 @@ e77ae23391ebacc4c3394ea97a7b9c4e *man/summary.vblpcm.Rd
 08998eccc00f203c34c43a20b7686e87 *man/vblpcmKL.Rd
 a4b9f5b23e6d95bf2bc81f01697c24d2 *man/vblpcmcovs.Rd
 7bb6ee8eec494bf59e5656905120a1d4 *man/vblpcmdrawpie.Rd
-1c1575b8d76a1bd0776a31f80db336fd *man/vblpcmfit.Rd
+faf7bff0082bb61e117b9d83441fcd3a *man/vblpcmfit.Rd
 0168242a2c896382b916a70d449451e6 *man/vblpcmgroups.Rd
 5c4be52f6272def826fa69501171c448 *man/vblpcmroc.Rd
-2bdd3b80ba66c11d79a3ed8941e65493 *man/vblpcmstart.Rd
-be6c82e2eecdb9fa0e85034a490562d1 *src/KL_funcs.c
-0cacb14c872b3c9d87e81ab3bb4ce9b5 *src/Makevars
+6b4b558ac60b6a284b02bd5295fb6ee9 *man/vblpcmstart.Rd
+acaeca43833c3432693fe5f9a6149bf9 *src/KL_funcs.c
 0cacb14c872b3c9d87e81ab3bb4ce9b5 *src/Makevars.in
 db26274171b9a08ecd0cc28116f5a6f5 *src/Makevars.win
-5a870f0d59901bb51eb4beb772806635 *src/VBLPCM.c
-7d172a0d8910a5a4f7e77db217270a82 *src/adjacency_to_edges.c
+6de979e4a8336b9dd9a29b760ae19c2d *src/VBLPCM.c
+f817a5918c432421b21e0be0475d4861 *src/adjacency_to_edges.c
 0ce87e3ee8377add5fec4f42df2bb544 *src/bb.c
 61a39c5900a8b02859418ac8e209e974 *src/fruchterman_reingold.c
 20e27a73db81027f7729d7ebb6558f0a *src/funcs.c
-5abb152ec5bbc0dab9c4a238a5cd8129 *src/headers.h
-d2cd82b9ed9c0c64c618e4fd380304be *src/likelihoods.c
+35f2931e427235e7500d051be222e620 *src/headers.h
+77b73e78373c3670987757474acf94ef *src/likelihoods.c
 c1765d6117ee135d7097aea1b18ce9d7 *src/log_like_forces.c
 7acd72a3200b6d011b99f15205f6540d *src/optim.c
